[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "json_repair"
version = "0.45.0"
license = {file = "LICENSE"}
authors = [
  { name="Stefano Baccianella", email="4247706+mangiucugna@users.noreply.github.com" },
]
description = "A package to repair broken json strings"
keywords = ["JSON", "REPAIR", "LLM", "PARSER"]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/mangiucugna/json_repair/"
"Bug Tracker" = "https://github.com/mangiucugna/json_repair/issues"
"Live demo" = "https://mangiucugna.github.io/json_repair/"
[tool.pytest.ini_options]
pythonpath = [
  "."
]
[tool.coverage.run]
omit = [
    "*/.cursor/extensions/*",
    "*/pythonFiles/lib/python/*",
    "*/site-packages/*",
]
[tool.coverage.report]
exclude_also = [
    'def __repr__',
    'if self.debug:',
    'if settings.DEBUG',
    'raise AssertionError',
    'raise NotImplementedError',
    'if 0:',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
    'class .*\bProtocol\):',
    '@(abc\.)?abstractmethod',
]
[tool.setuptools.package-data]
"pkgname" = ["py.typed"]
[tool.setuptools.packages.find]
where = ["src"]
[project.scripts]
json_repair = "json_repair.__main__:cli"
[tool.ruff]
# Same as Black.
indent-width = 4

# Assume Python 3.13
target-version = "py313"
[tool.ruff.lint]
# Read more here https://docs.astral.sh/ruff/rules/
# By default, Ruff enables Flake8's E and F rules
# Flake8-bandit - S
# Flake8-bugbear – catches real-world Python footguns - B
# Flake8-builtins - A
# Flake8-tidy-imports - TID
# Isort - I
# Mccabe – code complexity warnings - C90
# Pycodestyle - E, W
# Pyflakes - F
# Pylint - PLC, PLE, PLW
# Ruff specific - RUF
# Simplifications (e.g., if x == True → if x) - SIM
# Pyupgrade – safe modernization (e.g., str() → f"") - UP

select = ['A', 'B', 'C90', 'E', 'F', 'I', 'PLC', 'PLE', 'PLW', 'S', 'SIM', 'TID', 'UP', 'W']
# Only enable these RUF rules
extend-select = [
  "RUF001",  # ambiguous Unicode
  "RUF012",  # mutable default arguments
  "RUF013",  # unnecessary super()
  "RUF016",  # unnecessary else after return (optional)
  "RUF018",  # unnecessary else after raise (optional)
]
ignore = ["E501", "C901", "S101"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
# Explicit re-exports is fine in __init__.py, still a code smell elsewhere.
"__init__.py" = ["PLC0414"]